# pyMon

./: README.md  TODO.md  pyproject.toml
src/pymon/: __init__.py  __main__.py  progress.py  tui.py
src/pymon/abc/: stats.py  view_component.py
src/pymon/base/: cpu.py  disk.py  memory.py  miscellaneous.py  network.py
src/pymon/core/: logger.py  view.py
src/pymon/enum/: border.py
tests/base/: test_cpu.py  test_disk.py  test_memory.py  test_miscellaneous.py  test_network.py
